@@ -21,13 +21,14 @@
 
 set -e
 
-VERSION="0.7.1"
+VERSION="0.7.1+svn"
 
 # All the path we'll need
 libdir="/usr/share/backup-manager"
 zip="/usr/bin/zip"
 bzip="/usr/bin/bzip2"
 gzip="/bin/gzip"
+dar="/usr/bin/dar"
 tar="/bin/tar"
 rsync="/usr/bin/rsync"
 mkisofs="/usr/bin/mkisofs"
